project popup alignment fixes

--- a/src/app/views/popups/comic-project-showcase-popup/comic-project-showcase-popup.component.scss
+++ b/src/app/views/popups/comic-project-showcase-popup/comic-project-showcase-popup.component.scss
@@ -13,8 +13,20 @@
         margin: 0.5em;
     }
 
-    .description {
-        text-align: center;
+    .description-wrapper {
+        overflow-y: auto;
+        overflow-x: hidden;
+        // display: -webkit-box;
+        // -webkit-line-clamp: 3;
+        //         line-clamp: 3;
+        // -webkit-box-orient: vertical;
+        max-height: 72px; // 3 lines
+        padding: 0 1.5em;
+        margin: 0 0.83em 1em 1em;
+
+        .description {
+            text-align: center;
+        }
     }
 
     .close-btn {
