--- a/src/app/views/popups/video-project-showcase-popup/video-project-showcase-popup.component.scss
+++ b/src/app/views/popups/video-project-showcase-popup/video-project-showcase-popup.component.scss
@@ -16,10 +16,13 @@
     .description-wrapper {
         overflow-y: auto;
         overflow-x: hidden;
-        display: -webkit-box;
-        -webkit-line-clamp: 3;
-                line-clamp: 3;
-        -webkit-box-orient: vertical;
+        // display: -webkit-box;
+        // -webkit-line-clamp: 3;
+        //         line-clamp: 3;
+        // -webkit-box-orient: vertical;
+        max-height: 72px; // 3 lines
+        margin-bottom: 1em;
+        padding: 0 1em;
 
         .description {
             text-align: center;
@@ -36,7 +39,7 @@
         width: 100%;
         height: auto;
         aspect-ratio: 16 / 9;
-        margin: 0.5em;
+        margin: 0.5em 0.5em 0 0.5em;
     }
 
     ::-webkit-scrollbar-thumb {
